--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ input[type=submit], .retrybutton {
 .expertgoodbox {
     width: 100%;
     height: 100%;
-    background-color: lavender;
+    background-color: purple;
 }
 
 .box {
