--- a/style.css
+++ b/style.css
@@ -100,18 +100,21 @@ input[type=submit], .retrybutton {
     width: 100%;
     height: 100%;
     background-color: limegreen;
+    box-shadow: -5px 0 inset rgba(0, 0, 0, 0.5);
 }
 
 .badbox {
     width: 100%;
     height: 100%;
     background-color: firebrick;
+    box-shadow: -5px 0 inset rgba(0, 0, 0, 0.5);
 }
 
 .expertgoodbox {
     width: 100%;
     height: 100%;
-    background-color: purple;
+    background-color: limegreen;
+    box-shadow: -5px 0 inset rgba(0, 0, 0, 0.5), 0 0 3px red;
 }
 
 .box {
