--- a/style.css
+++ b/style.css
@@ -100,21 +100,21 @@ input[type=submit], .retrybutton {
     width: 100%;
     height: 100%;
     background-color: limegreen;
-    box-shadow: -5px 0 inset rgba(0, 0, 0, 0.5);
+    box-shadow: 0 -3px inset rgba(0, 0, 0, 0.2);
 }
 
 .badbox {
     width: 100%;
     height: 100%;
     background-color: firebrick;
-    box-shadow: -5px 0 inset rgba(0, 0, 0, 0.5);
+    box-shadow: 0 -3px inset rgba(0, 0, 0, 0.2);
 }
 
 .expertgoodbox {
     width: 100%;
     height: 100%;
     background-color: limegreen;
-    box-shadow: -5px 0 inset rgba(0, 0, 0, 0.5), 0 0 3px red;
+    box-shadow: 0 -3px inset rgba(0, 0, 0, 0.2), 0 0 5px 3px red;
 }
 
 .box {
