--- a/style.css
+++ b/style.css
@@ -115,6 +115,19 @@ input[type=submit], .retrybutton {
     height: 100%;
     background-color: limegreen;
     box-shadow: 0 -3px inset rgba(0, 0, 0, 0.2), 0 0 5px 3px red;
+    animation: pulse 1s infinite;
+}
+
+@keyframes pulse {
+    0% {
+        box-shadow: 0 -3px inset rgba(0, 0, 0, 0.2), 0 0 2px 3px rgba(255, 0, 0, 0.2);
+    }
+    50% {
+        box-shadow: 0 -3px inset rgba(0, 0, 0, 0.2), 0 0 5px 3px red;
+    }
+    100% {
+        box-shadow: 0 -3px inset rgba(0, 0, 0, 0.2), 0 0 2px 3px rgba(255, 0, 0, 0.2);
+    }
 }
 
 .box {
